--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
     "@floating-ui/react-dom": "^2.0.8",
     "@mui/material": "^5.15.9",
     "@mui/x-data-grid": "^6.19.4",
+    "@mui/x-date-pickers": "^6.19.5",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "antd": "^5.13.2",
     "axios": "^1.6.2",
     "chart.js": "^4.4.1",
+    "dayjs": "^1.11.10",
     "formik": "^2.4.5",
     "jszip": "^3.10.1",
     "material-react-table": "^2.11.3",
