--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "dependencies": {
     "@dnd-kit/core": "^6.1.0",
     "@dnd-kit/sortable": "^8.0.0",
+    "@emoji-mart/data": "^1.1.2",
+    "@emoji-mart/react": "^1.1.1",
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
     "@floating-ui/react": "^0.26.8",
@@ -19,13 +21,21 @@
     "axios": "^1.6.2",
     "chart.js": "^4.4.1",
     "dayjs": "^1.11.10",
+    "emoji-mart": "^5.5.2",
+    "env": "^0.0.2",
     "formik": "^2.4.5",
+    "jodit-react": "^4.0.15",
+    "jsonwebtoken": "^9.0.2",
     "jszip": "^3.10.1",
+    "lamejs": "^1.2.1",
     "material-react-table": "^2.11.3",
+    "mic-recorder-to-mp3": "^2.2.2",
     "moment": "^2.29.4",
     "papaparse": "^5.4.1",
     "randomcolor": "^0.6.2",
+    "rc-progress": "^4.0.0",
     "react": "^18.2.0",
+    "react-audio-visualize": "^1.1.3",
     "react-beautiful-dnd": "^13.1.1",
     "react-big-calendar": "^1.8.5",
     "react-calendar": "^4.7.0",
@@ -41,12 +51,16 @@
     "react-mobile-datepicker": "^4.0.2",
     "react-modal": "^3.16.1",
     "react-otp-input": "^3.1.0",
+    "react-quill": "^2.0.0",
     "react-range": "^1.8.14",
     "react-router-dom": "^6.20.1",
     "react-scripts": "5.0.1",
     "react-select": "^5.8.0",
     "react-table": "^7.8.0",
+    "recorder-js": "^1.0.7",
+    "socket.io-client": "^4.7.5",
     "styled-components": "^6.1.1",
+    "wavesurfer.js": "^7.7.10",
     "web-vitals": "^2.1.4",
     "xlsx": "^0.18.5"
   },
